# UnitsLang

./: CMakeLists.txt  README.md  codeTest  dokumentacja.md  exampleScript  input
src/: CMakeLists.txt  main.cpp
src/codeObjects/: BinaryExpression.cpp  BinaryExpression.h  Bool.h  BoolValue.h  Break.h  CMakeLists.txt  Continue.h  Expression.h  FuncCall.cpp  FuncCall.h  FuncDef.cpp  FuncDef.h  If.cpp  If.h  InstrResult.h  Instruction.cpp  Instruction.h  InstructionBlock.cpp  InstructionBlock.h  InternalPrintInstr.cpp  InternalPrintInstr.h  Interpreter.cpp  Interpreter.h  NumberValue.h  Program.cpp  Program.h  Return.h  StrType.h  String.h  Type.h  Type2.h  Unit.cpp  Unit.h  UnitBinaryExpression.h  UnitExpression.h  Value.h  VarDef.h  VarDefOrAssignment.cpp  VarDefOrAssignment.h  VarReference.h  (+6 more)
src/error/: ErrorHandler.h  LexerError.h  UnknownLexemeError.h
src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.cpp  Token.h  TokenSource.h  lexer_tests.cpp
src/parser/: CMakeLists.txt  Parser.cpp  Parser.h  Parser.hpp  parser_tests.cpp
src/source/: CMakeLists.txt  FileSource.cpp  FileSource.h  Source.cpp  Source.h  StringSource.cpp  StringSource.h  source_tests.cpp
src/utils/: printUtils.h
